fix: reduce padding on small screens

--- a/src/_includes/style.css
+++ b/src/_includes/style.css
@@ -446,7 +446,7 @@ section {
     margin-top: 0;
   }
 
-  section {
+  section, .single-page {
     padding: 2rem;
   }
 
